--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>
-  {{title}}
-</h1>
+<div *ngIf="login">
+  <app-login (OnLoginSuccess)="onLoginSuccess($event)"></app-login>
+</div>
+<as-navbar *ngIf="!login"></as-navbar>
+<div class="deal" hidden="{{outletText}}">
+  <router-outlet></router-outlet>
+</div>
