--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,7 +1,17 @@
+<div class="form-container" id="toolbar">
+  <header [@fallIn]="state">
+    <button (click)="logout()" class="basic-btn">Logout</button>
+  </header>
+  <div id="page" [@moveInLeft]="state">
+    <h2>Hey {{ name.auth.displayName }}!</h2>
 
+    <img src="assets/images/filler.png" />
+  </div>
+
+</div>
 <div class="panel">
   <div class="panel-body">
-    <div class="top-logo"> 
+    <div class="top-logo">
       <img [src]="logoUrl"/>
       <h3>| Members: &nbsp;<span class="badge">{{membercount}}</span>
       | Active Members: &nbsp;<span class="badge">{{activecount}}</span>
